<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:background="@color/purple_200"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:text="@string/enter_details"
                android:layout_centerHorizontal="true"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/titleItem"
                android:layout_below="@id/title"
                android:textColor="@color/white"
                android:text="@string/enter_text"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/babyItem"
                android:layout_below="@id/titleItem"
                android:textColor="@color/white"
                android:hint="@string/hint_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/titleQuantity"
                android:text="@string/item_Quantity"
                android:textColor="@color/white"
                android:layout_below="@id/babyItem"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/itemQuantity"
                android:layout_below="@id/titleQuantity"
                android:hint="@string/hint_quantity"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/titleColor"
                android:text="@string/enter_color"
                android:textColor="@color/white"
                android:layout_below="@id/itemQuantity"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/itemColor"
                android:layout_below="@id/titleColor"
                android:hint="@string/hint_color"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/titleSize"
                android:text="@string/enter_size"
                android:layout_below="@id/itemColor"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/itemSize"
                android:layout_below="@id/titleSize"
                android:hint="@string/hint_size"
                android:textColor="@color/white"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_below="@id/itemSize"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:background="@color/teal_700"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>